Add: Create profile page. Added component for no-link cards.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Header from "../components/Header.astro";
 <Layout title="Welcome to Astro.">
   <Header />
   <main>
-    <h1>Welcome to <span class="text-gradient">Mogy's Portfolio!!</span></h1>
+    <h1><span class="text-gradient">Mogy's Portfolio</span></h1>
     <p class="instructions">
       Astroという新しいフレームワークを使って作成したポートフォリオです。
     </p>
