Add: Create product page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,6 +11,10 @@
 </header>
 <style>
   header {
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    z-index: 1000;
     width: 100%;
     background-color: white;
     transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
