--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,6 +40,9 @@ const { title } = Astro.props;
     margin: 0;
     padding: 0;
   }
+  html body main {
+    margin-top: 65px;
+  }
   code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
       DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
