--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -8,7 +8,7 @@ const fetchProductData = async () => {
       `https://api.spearly.com/content_types/products/contents`,
       {
         headers: {
-          Authorization: "Bearer " + import.meta.env.SPEARLY_API_KEY,
+          Authorization: "Bearer " + process.env.SPEARLY_API_KEY,
           Accept: "application/vnd.spearly.v2+json",
         },
       }
