[fix] フレームワーク名を修正する

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Header from "../components/Header.astro";
   <main>
     <h1><span class="text-gradient">Mogy's Portfolio</span></h1>
     <p class="instructions">
-      Astroという新しいフレームワークを使って作成したポートフォリオです。
+      Next.jsという新しいフレームワークを使って作成したポートフォリオです。
     </p>
     <ul role="list" class="link-card-grid">
       <Card href="/profile" title="Profile" body="Mogyの経歴・趣味などを紹介" />
